# large-file-distribution-system

./: Cargo.toml  README.md  erasure.rs  main.rs  metrics.rs  model-distribution-architecture.mermaid  model-distribution-examples.rs  model-distribution-sequence.mermaid  model-distribution-spec.docx  model-distribution-spec.md
peer/: chunk_server.rs  mod.rs
proto/: client.rs  mod.rs
src/: delta.rs  erasure.rs  error.rs  main.rs  manifest.rs  metrics.rs
src/peer/: chunk_server.rs  downloader.rs
src/proto/: client.rs  mod.rs
src/tracker/: mod.rs
tracker/: mod.rs  scheduler.rs  server.rs
