[package]
name    = "model-distribution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "model-dist"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", features = ["codec", "io"] }

# Networking
bytes        = "1"

# Hashing / integrity
sha2         = "0.10"
hex          = "0.4"

# Erasure coding
reed-solomon-erasure = "6"

# Bitmaps
bitvec       = "1"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
metrics             = "0.21"
metrics-exporter-prometheus = "0.12"

# CLI & config
clap         = { version = "4", features = ["derive"] }
toml         = "0.8"

# Utilities
uuid         = { version = "1", features = ["v4"] }
anyhow       = "1"
thiserror    = "1"
dashmap      = "5"
parking_lot  = "0.12"
chrono       = { version = "0.4", features = ["serde"] }
rand         = "0.8"

[dev-dependencies]
tokio-test   = "0.4"
tempfile     = "3"
